// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`humanScore — integración sobre las 9 fixtures del baseline > definicion_flexible — humanScore(result) coincide con la snapshot congelada > definicion_flexible 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "No hay días con day.special === "entrenamiento" en este plan.",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": null,
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=0 (ligero)",
      "Miércoles: densidad=1 (ligero)",
      "Jueves: densidad=3 (denso)",
      "Viernes: densidad=0 (ligero)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=2 (intermedio)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Jueves": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: martes comida, viernes comida, viernes cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Martes",
          "time": "Comida",
        },
        {
          "day": "Viernes",
          "time": "Comida",
        },
        {
          "day": "Viernes",
          "time": "Cena",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 2 veces: lunes cena, viernes cena",
      "curry_ligero aparece 2 veces: viernes comida, sábado cena",
      "limon_hierbas aparece 2 veces: lunes comida, domingo comida",
      "pimenton_ajo aparece 2 veces: miércoles cena, domingo cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 2,
        "limon_hierbas": 2,
        "mostaza_miel": 1,
        "pimenton_ajo": 2,
        "soja_jengibre": 1,
        "tomate_casero": 1,
        "vinagreta": 1,
      },
      "repeticionesDestacadas": [],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "horno aparece 4 veces: lunes cena, miércoles comida, jueves cena, domingo cena",
      "plancha aparece 3 veces: lunes comida, martes cena, viernes cena",
      "salteado aparece 3 veces: jueves comida, viernes comida, sábado cena",
      "crudo aparece 2 veces: martes comida, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 2,
        "horno": 4,
        "plancha": 3,
        "revuelto": 1,
        "salteado": 3,
      },
      "repeticionesDestacadas": [
        {
          "count": 4,
          "value": "horno",
        },
        {
          "count": 3,
          "value": "plancha",
        },
        {
          "count": 3,
          "value": "salteado",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > definicion_saciante — humanScore(result) coincide con la snapshot congelada > definicion_saciante 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "Lunes (entrenamiento) → cena con hidrato (arroz)",
      "Miércoles (entrenamiento) → cena con hidrato (boniato)",
      "Viernes (entrenamiento) → cena con hidrato (patata)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": {
      "conHidrato": 3,
      "deTotalComputados": 3,
      "detalle": [
        {
          "carb": "arroz",
          "day": "Lunes",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "boniato",
          "day": "Miércoles",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "patata",
          "day": "Viernes",
          "status": "computed",
          "tieneHidrato": true,
        },
      ],
      "diasEntrenamiento": 3,
    },
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=1 (ligero)",
      "Martes: densidad=1 (ligero)",
      "Miércoles: densidad=1 (ligero)",
      "Jueves: densidad=0 (ligero)",
      "Viernes: densidad=2 (intermedio)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=0 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Jueves": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Lunes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Miércoles (elaborado) → Jueves (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Miércoles",
        "facilDespues": "Jueves",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: lunes comida, miércoles comida, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Lunes",
          "time": "Comida",
        },
        {
          "day": "Miércoles",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 2 veces: martes comida, sábado cena",
      "curry_ligero aparece 2 veces: miércoles comida, miércoles cena",
      "pimenton_ajo aparece 2 veces: lunes cena, jueves cena",
      "vinagreta aparece 2 veces: jueves comida, viernes comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 2,
        "limon_hierbas": 1,
        "mostaza_miel": 1,
        "pimenton_ajo": 2,
        "provenzal": 1,
        "romero_limon": 1,
        "vinagreta": 2,
      },
      "repeticionesDestacadas": [],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 6 veces: lunes cena, martes cena, miércoles cena, viernes comida, viernes cena, domingo cena",
      "crudo aparece 2 veces: jueves comida, domingo comida",
      "horno aparece 2 veces: martes comida, sábado cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 2,
        "guisado": 1,
        "horno": 2,
        "plancha": 6,
        "revuelto": 1,
        "salteado": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 6,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > fat_loss_general — humanScore(result) coincide con la snapshot congelada > fat_loss_general 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "No hay días con day.special === "entrenamiento" en este plan.",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": null,
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=1 (ligero)",
      "Miércoles: densidad=3 (denso)",
      "Jueves: densidad=2 (intermedio)",
      "Viernes: densidad=2 (intermedio)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=0 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Jueves": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Martes (elaborado) → Miércoles (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Martes",
        "facilDespues": "Miércoles",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: martes comida, martes cena, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Martes",
          "time": "Comida",
        },
        {
          "day": "Martes",
          "time": "Cena",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 2 veces: lunes cena, miércoles comida",
      "curry_ligero aparece 2 veces: miércoles cena, domingo comida",
      "limon_hierbas aparece 2 veces: lunes comida, jueves comida",
      "mostaza_miel aparece 2 veces: jueves cena, viernes comida",
      "pimenton_ajo aparece 2 veces: martes comida, viernes cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 2,
        "limon_hierbas": 2,
        "mostaza_miel": 2,
        "pimenton_ajo": 2,
        "provenzal": 1,
        "vinagreta": 1,
      },
      "repeticionesDestacadas": [],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 5 veces: lunes comida, martes cena, jueves comida, viernes comida, domingo cena",
      "crudo aparece 2 veces: miércoles comida, sábado cena",
      "horno aparece 2 veces: lunes cena, jueves cena",
      "salteado aparece 2 veces: miércoles cena, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 2,
        "guisado": 1,
        "horno": 2,
        "plancha": 5,
        "salteado": 2,
        "tortilla": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 5,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > mantenimiento_equilibrado (base) — humanScore(result) coincide con la snapshot congelada > mantenimiento_equilibrado (base) 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "No hay días con day.special === "entrenamiento" en este plan.",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": null,
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=1 (ligero)",
      "Miércoles: densidad=2 (intermedio)",
      "Jueves: densidad=1 (ligero)",
      "Viernes: densidad=3 (denso)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=0 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Jueves": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Martes (elaborado) → Miércoles (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Martes",
        "facilDespues": "Miércoles",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: jueves comida, jueves cena, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Jueves",
          "time": "Comida",
        },
        {
          "day": "Jueves",
          "time": "Cena",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 3 veces: lunes cena, martes comida, sábado cena",
      "limon_hierbas aparece 3 veces: lunes comida, martes cena, domingo cena",
      "pimenton_ajo aparece 2 veces: jueves comida, viernes comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 3,
        "curry_ligero": 1,
        "limon_hierbas": 3,
        "pimenton_ajo": 2,
        "romero_limon": 1,
        "soja_jengibre": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "ajillo",
        },
        {
          "count": 3,
          "value": "limon_hierbas",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "crudo aparece 3 veces: miércoles comida, jueves cena, domingo comida",
      "horno aparece 3 veces: lunes cena, martes comida, domingo cena",
      "plancha aparece 3 veces: lunes comida, martes cena, viernes cena",
      "salteado aparece 2 veces: miércoles cena, viernes comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 3,
        "guisado": 1,
        "horno": 3,
        "plancha": 3,
        "revuelto": 1,
        "salteado": 2,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "crudo",
        },
        {
          "count": 3,
          "value": "horno",
        },
        {
          "count": 3,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > mantenimiento_equilibrado + intolerancias (lactosa+gluten) — humanScore(result) coincide con la snapshot congelada > mantenimiento_equilibrado + intolerancias (lactosa+gluten) 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "No hay días con day.special === "entrenamiento" en este plan.",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": null,
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=2 (intermedio)",
      "Miércoles: densidad=1 (ligero)",
      "Jueves: densidad=2 (intermedio)",
      "Viernes: densidad=0 (ligero)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=1 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Jueves": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Lunes (elaborado) → Martes (fácil): patrón de arco coherente",
      "Jueves (elaborado) → Viernes (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Lunes",
        "facilDespues": "Martes",
      },
      {
        "elaborado": "Jueves",
        "facilDespues": "Viernes",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 5 veces: miércoles comida, viernes comida, viernes cena, domingo comida, domingo cena",
      "umbral provisional de repetición destacada (>=4) alcanzado: 5 veces",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 5,
      "ocurrencias": [
        {
          "day": "Miércoles",
          "time": "Comida",
        },
        {
          "day": "Viernes",
          "time": "Comida",
        },
        {
          "day": "Viernes",
          "time": "Cena",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Cena",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "limon_hierbas aparece 3 veces: martes comida, miércoles cena, sábado cena",
      "curry_ligero aparece 2 veces: miércoles comida, jueves cena",
      "mostaza_miel aparece 2 veces: lunes cena, jueves comida",
      "pimenton_ajo aparece 2 veces: lunes comida, martes cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 1,
        "curry_ligero": 2,
        "limon_hierbas": 3,
        "mostaza_miel": 2,
        "pimenton_ajo": 2,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "limon_hierbas",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "crudo aparece 3 veces: martes comida, viernes comida, domingo cena",
      "plancha aparece 3 veces: lunes cena, jueves comida, sábado cena",
      "guisado aparece 2 veces: viernes cena, domingo comida",
      "horno aparece 2 veces: lunes comida, miércoles cena",
      "salteado aparece 2 veces: miércoles comida, jueves cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 3,
        "guisado": 2,
        "horno": 2,
        "plancha": 3,
        "salteado": 2,
        "tortilla": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "crudo",
        },
        {
          "count": 3,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > mantenimiento_equilibrado + isSimple (experiencia novato) — humanScore(result) coincide con la snapshot congelada > mantenimiento_equilibrado + isSimple (experiencia novato) 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "No hay días con day.special === "entrenamiento" en este plan.",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": null,
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=1 (ligero)",
      "Miércoles: densidad=1 (ligero)",
      "Jueves: densidad=1 (ligero)",
      "Viernes: densidad=1 (ligero)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=0 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Jueves": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: miércoles cena, sábado cena, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Miércoles",
          "time": "Cena",
        },
        {
          "day": "Sábado",
          "time": "Cena",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 2 veces: lunes cena, miércoles comida",
      "limon_hierbas aparece 2 veces: jueves comida, domingo cena",
      "pimenton_ajo aparece 2 veces: martes cena, viernes cena",
      "vinagreta aparece 2 veces: lunes comida, martes comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 1,
        "limon_hierbas": 2,
        "mostaza_miel": 1,
        "pimenton_ajo": 2,
        "vinagreta": 2,
      },
      "repeticionesDestacadas": [],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 3 veces: martes comida, viernes comida, viernes cena",
      "crudo aparece 2 veces: lunes comida, domingo comida",
      "horno aparece 2 veces: lunes cena, jueves comida",
      "salteado aparece 2 veces: miércoles comida, jueves cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 2,
        "guisado": 1,
        "horno": 2,
        "plancha": 3,
        "revuelto": 1,
        "salteado": 2,
        "tortilla": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > mantenimiento_equilibrado + trainingDays — humanScore(result) coincide con la snapshot congelada > mantenimiento_equilibrado + trainingDays 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "Lunes (entrenamiento) → cena con hidrato (arroz)",
      "Miércoles (entrenamiento) → cena con hidrato (boniato)",
      "Viernes (entrenamiento) → cena con hidrato (patata)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": {
      "conHidrato": 3,
      "deTotalComputados": 3,
      "detalle": [
        {
          "carb": "arroz",
          "day": "Lunes",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "boniato",
          "day": "Miércoles",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "patata",
          "day": "Viernes",
          "status": "computed",
          "tieneHidrato": true,
        },
      ],
      "diasEntrenamiento": 3,
    },
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=2 (intermedio)",
      "Martes: densidad=1 (ligero)",
      "Miércoles: densidad=2 (intermedio)",
      "Jueves: densidad=0 (ligero)",
      "Viernes: densidad=2 (intermedio)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=0 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Jueves": {
        "classification": "ligero",
        "density": 0,
        "status": "computed",
      },
      "Lunes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Martes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Lunes (elaborado) → Martes (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Lunes",
        "facilDespues": "Martes",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 3 veces: jueves comida, domingo comida, domingo cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 3,
      "ocurrencias": [
        {
          "day": "Jueves",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Cena",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "ajillo aparece 2 veces: martes cena, domingo comida",
      "curry_ligero aparece 2 veces: miércoles cena, jueves comida",
      "pimenton_ajo aparece 2 veces: lunes cena, sábado cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 2,
        "limon_hierbas": 1,
        "mostaza_miel": 1,
        "pimenton_ajo": 2,
        "provenzal": 1,
        "romero_limon": 1,
        "soja_jengibre": 1,
        "vinagreta": 1,
      },
      "repeticionesDestacadas": [],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 6 veces: lunes cena, martes comida, miércoles cena, jueves cena, viernes comida, viernes cena",
      "horno aparece 2 veces: lunes comida, martes cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 1,
        "guisado": 1,
        "horno": 2,
        "plancha": 6,
        "salteado": 1,
        "tortilla": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 6,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > volumen_agresivo — humanScore(result) coincide con la snapshot congelada > volumen_agresivo 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "Lunes (entrenamiento) → cena con hidrato (arroz)",
      "Martes (entrenamiento) → cena con hidrato (patata)",
      "Jueves (entrenamiento) → cena con hidrato (arroz)",
      "Viernes (entrenamiento) → cena con hidrato (patata)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": {
      "conHidrato": 4,
      "deTotalComputados": 4,
      "detalle": [
        {
          "carb": "arroz",
          "day": "Lunes",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "patata",
          "day": "Martes",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "arroz",
          "day": "Jueves",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "patata",
          "day": "Viernes",
          "status": "computed",
          "tieneHidrato": true,
        },
      ],
      "diasEntrenamiento": 4,
    },
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=3 (denso)",
      "Martes: densidad=2 (intermedio)",
      "Miércoles: densidad=1 (ligero)",
      "Jueves: densidad=3 (denso)",
      "Viernes: densidad=1 (ligero)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=2 (intermedio)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Jueves": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Lunes": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Martes": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 2 veces: domingo comida, domingo cena",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 2,
      "ocurrencias": [
        {
          "day": "Domingo",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Cena",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "pimenton_ajo aparece 3 veces: lunes cena, jueves cena, domingo comida",
      "romero_limon aparece 3 veces: martes cena, miércoles comida, viernes cena",
      "tomate_casero aparece 2 veces: lunes comida, jueves comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 1,
        "mostaza_miel": 1,
        "pimenton_ajo": 3,
        "romero_limon": 3,
        "soja_jengibre": 1,
        "tomate_casero": 2,
        "vinagreta": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "pimenton_ajo",
        },
        {
          "count": 3,
          "value": "romero_limon",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 6 veces: lunes cena, martes cena, miércoles cena, jueves cena, viernes comida, viernes cena",
      "crudo aparece 2 veces: martes comida, domingo cena",
      "horno aparece 2 veces: miércoles comida, sábado cena",
      "salteado aparece 2 veces: lunes comida, jueves comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 2,
        "guisado": 1,
        "horno": 2,
        "plancha": 6,
        "salteado": 2,
      },
      "repeticionesDestacadas": [
        {
          "count": 6,
          "value": "plancha",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;

exports[`humanScore — integración sobre las 9 fixtures del baseline > volumen_limpio — humanScore(result) coincide con la snapshot congelada > volumen_limpio 1`] = `
{
  "alternanciaBatch": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "coherenciaCompraPerecederos": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
  "continuidadEntrenoHidrato": {
    "evidencias": [
      "Lunes (entrenamiento) → cena con hidrato (arroz)",
      "Jueves (entrenamiento) → cena con hidrato (arroz)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": {
      "conHidrato": 2,
      "deTotalComputados": 2,
      "detalle": [
        {
          "carb": "arroz",
          "day": "Lunes",
          "status": "computed",
          "tieneHidrato": true,
        },
        {
          "carb": "arroz",
          "day": "Jueves",
          "status": "computed",
          "tieneHidrato": true,
        },
      ],
      "diasEntrenamiento": 2,
    },
  },
  "densidadDiaria": {
    "evidencias": [
      "Lunes: densidad=3 (denso)",
      "Martes: densidad=3 (denso)",
      "Miércoles: densidad=2 (intermedio)",
      "Jueves: densidad=2 (intermedio)",
      "Viernes: densidad=1 (ligero)",
      "Sábado: densidad=unknown (menos de 2 comidas legibles)",
      "Domingo: densidad=1 (ligero)",
    ],
    "polarity": null,
    "status": "computed",
    "valor": {
      "Domingo": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
      "Jueves": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Lunes": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Martes": {
        "classification": "denso",
        "density": 3,
        "status": "computed",
      },
      "Miércoles": {
        "classification": "intermedio",
        "density": 2,
        "status": "computed",
      },
      "Sábado": {
        "classification": null,
        "density": null,
        "status": "unknown",
      },
      "Viernes": {
        "classification": "ligero",
        "density": 1,
        "status": "computed",
      },
    },
  },
  "diaFacilTrasElaborado": {
    "evidencias": [
      "Miércoles (elaborado) → Jueves (fácil): patrón de arco coherente",
      "Días excluidos de la comparación elaborado→fácil por datos insuficientes: Sábado",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": [
      {
        "elaborado": "Miércoles",
        "facilDespues": "Jueves",
      },
    ],
  },
  "domingoReconfortante": {
    "evidencias": [
      "Domingo → effectiveMood: "reconfortante" (patrón comfort domingo activo, buildPlan.js:2354-2356)",
    ],
    "polarity": "higher_is_better",
    "status": "computed",
    "valor": true,
  },
  "platoCuchara": {
    "evidencias": [
      "plato de cuchara (tmpl legumbre/sopa_crema) aparece 2 veces: viernes comida, domingo comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "count": 2,
      "ocurrencias": [
        {
          "day": "Viernes",
          "time": "Comida",
        },
        {
          "day": "Domingo",
          "time": "Comida",
        },
      ],
      "umbralDestacadaProvisional": 4,
    },
  },
  "repeticionProteinaMismoDia": {
    "evidencias": [
      "Requiere histórico multi-semana (proteína del mismo día en semanas previas). Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "repeticionSalsa": {
    "evidencias": [
      "pimenton_ajo aparece 3 veces: lunes cena, jueves cena, viernes cena",
      "ajillo aparece 2 veces: lunes comida, martes comida",
      "curry_ligero aparece 2 veces: jueves comida, viernes comida",
      "mostaza_miel aparece 2 veces: miércoles cena, domingo cena",
      "romero_limon aparece 2 veces: martes cena, miércoles comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "ajillo": 2,
        "curry_ligero": 2,
        "mostaza_miel": 2,
        "pimenton_ajo": 3,
        "romero_limon": 2,
        "vinagreta": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 3,
          "value": "pimenton_ajo",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "repeticionTecnica": {
    "evidencias": [
      "plancha aparece 5 veces: lunes cena, martes cena, jueves comida, jueves cena, domingo cena",
      "crudo aparece 3 veces: martes comida, sábado cena, domingo comida",
      "horno aparece 2 veces: miércoles comida, miércoles cena",
      "salteado aparece 2 veces: lunes comida, viernes comida",
    ],
    "polarity": "lower_is_better",
    "status": "computed",
    "valor": {
      "conteos": {
        "crudo": 3,
        "horno": 2,
        "plancha": 5,
        "salteado": 2,
        "tortilla": 1,
      },
      "repeticionesDestacadas": [
        {
          "count": 5,
          "value": "plancha",
        },
        {
          "count": 3,
          "value": "crudo",
        },
      ],
      "umbralDestacadaProvisional": 3,
    },
  },
  "sorpresaEditorial": {
    "evidencias": [
      "Requiere histórico multi-semana para comparar contra semanas previas y detectar variación editorial. Fuera de scope en Fase 0.5.",
    ],
    "polarity": null,
    "status": "needs_history",
    "valor": null,
  },
  "usoSobrasVidaUtil": {
    "evidencias": [],
    "polarity": null,
    "status": "needs_engine2",
    "valor": null,
  },
}
`;
